--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/datasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/datasets.html.twig
@@ -6,7 +6,7 @@ var tabIndex = 0;
 
 <div id="tabs">
 
-    {% if datasets.available | length or datasets.restricted | length or datasets.inReview | length or dataset.identified | length %}
+    {% if datasets.available | length or datasets.restricted | length or datasets.inReview | length or datasets.identified | length %}
 
         <div id="tablist" class="row">
             <div class="cell">
