--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/index.html.twig
@@ -20,12 +20,12 @@
             [
                 '//cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/OpenLayers.js',
                 '//maps.google.com/maps/api/js?v=3',
-                '/includes/geoviz/geoviz.js',
             ]
         )
     }}
 
     {% javascripts
+        '@PelagosAppBundle/Resources/public/js/geoviz.js'
         '@PelagosAppBundle/Resources/public/js/data-discovery.js'
         '@PelagosAppBundle/Resources/public/js/tree.js'
         '@FOSJsRoutingBundle/Resources/public/js/router.js'
