Added minimalist navigation between screens.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/PublicationDatasetLink/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/PublicationDatasetLink/index.html.twig
@@ -44,6 +44,10 @@
         </div>
     </fieldset>
 
+    <div>
+        <a href="{{ path('pelagos_app_ui_publicationdatasetlink_list') }}">All Links</a>
+    </div>
+
     <button id="link" class="pelagos-button" style="margin-top:20px;" disabled>Link</button>
 
     <div id="dialog-linked" title="Linked Successfully">
