--- a/src/Pelagos/Bundle/AppBundle/Resources/views/PublicationDatasetLink/linkList.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/PublicationDatasetLink/linkList.html.twig
@@ -59,6 +59,10 @@
 <tbody>
 </tbody>
 </table>
+<div>
+    <a href="{{ path('pelagos_app_ui_publicationdatasetlink_default') }}">Create new</a>
+</div>
+
 <button id="delete_button" disabled>Delete Selected Row</button>
 <div id="dialog-confirm" title="Are you sure?">
 </div>
