--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DoiRequest/doiForm.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DoiRequest/doiForm.html.twig
@@ -1,95 +1,140 @@
-<div id="dialog" style=""></div>
 
-<div id="url_tip" style="display:none;">
-    <img src="/images/icons/info.png" style="float:right;" />
-    <p>
-        <strong>Location (URL):</strong> This is the Uniform Resource Locator (URL) that resolves to the dataset.<br><em>(e.g. http://www.nodc.noaa.gov/cgi-bin/OAS/prd/download/65725.11.11.tar.gz)</em>
-    </p>
+{% if isValid and isSubmitted %}
+<div class="messages status">
+    <h2 class="element-invisible">Status message</h2>
+    Thank you for your submission. You will be contacted by GRIIDC shortly with your DOI. Please email <a href="mailto:griidc@gomri.org?subject=Registration Form">griidc@gomri.org</a> if you have any questions.
 </div>
+{% endif %}
 
-<div id="creator_tip" style="display:none;">
-    <img src="/images/icons/info.png" style="float:right;" />
-    <p>
-        <strong>Creator(s):</strong> The primary scientist or researcher in producing the data, or the authors of the publication in priority order. The names may include a corporate, institutions, or personal name. In personal names, list family name before given name, as in Darwin, Charles. Non-roman names should be transliterated according to the ALA-LC schemes. <a href="http://www.loc.gov/catdir/cpso/roman.html" target="_blank"><em>(http://www.loc.gov/catdir/cpso/roman.html)</em></a>. 
-    </p>
+{% if not isValid and isSubmitted %}
+<div class="messages error">
+    <h2 class="element-invisible">Status message</h2>
+    Something went wrong, please correct the form and resubmit. Please email <a href="mailto:griidc@gomri.org?subject=Registration Form">griidc@gomri.org</a> if you have any questions.
+    {{ form_errors(form) }}
 </div>
+{% endif %}
 
-<div id="title_tip" style="display:none;">
-    <img src="/images/icons/info.png" style="float:right;" />
-    <p>
-        <strong>Title:</strong> A label by which the data or publication is known. <em>(e.g. Multibeam bathymetry data for east Flower Garden Bank)</em>
-    </p>
+{% if doiRequest.status == constant('Pelagos\\Entity\\DoiRequest::STATUS_APPROVED') %}
+<div class="messages warning">
+    <h2 class="element-invisible">Status message</h2>
+    The DOI form was Approved, the DOI will be issues shortly by e-mail. Please email <a href="mailto:griidc@gomri.org?subject=Registration Form">griidc@gomri.org</a> if you have any questions.
+    {{ form_errors(form) }}
 </div>
+{% endif %}
 
-<div id="publisher_tip" style="display:none;">
-    <img src="/images/icons/info.png" style="float:right;" />
-    <p>
-        <strong>Publisher:</strong> A holder of the data (e.g., GRIIDC) or the institution responsible for making the data available to the public. 
-    </p>
+{% if doiRequest.status == constant('Pelagos\\Entity\\DoiRequest::STATUS_ISSUED') %}
+<div class="messages status">
+    <h2 class="element-invisible">Status message</h2>
+    The DOI form was Approved, the issued DOI is: <b>{{doiRequest.doi}}</b>. Please email <a href="mailto:griidc@gomri.org?subject=Registration Form">griidc@gomri.org</a> if you have any questions.
+    {{ form_errors(form) }}
 </div>
-
-<div id="txtDate_tip" style="display:none;">
-    <img src="/images/icons/info.png" style="float:right;" />
-    <p>
-        <strong>Publication Date:</strong> A valid ISO 8601 date <em>e.g. (2012-12-23)</em>
-    </p>
-</div>
+{% endif %}
 
 <table  border=0 width="45%,*">
-<tr>
-<td class="cleair cmxform">
-<fieldset>
-    <p><STRONG> NOTE: </STRONG><FONT COLOR="grey">A <em>Digital Object Identifier</em> (DOI) is a persistent unique identifier of an electronic dataset or document and recognized internationally. The DOI is used by GRIIDC as an alternate to dataset registration identifiers and can be used to resolve back to the data itself. The following form will allow you to submit the appropriate information to receive a DOI for your dataset or document. Once you have completed this form, your information will be sent to GRIIDC for approval, and once approved a DOI will be sent to you.<font></p>
-</fieldset>
+    <tr>
+        <td class="cleair cmxform">
+            <fieldset>
+                <p><STRONG> NOTE: </STRONG><FONT COLOR="grey">A <em>Digital Object Identifier</em> (DOI) is a persistent unique identifier of an electronic dataset or document and recognized internationally. The DOI is used by GRIIDC as an alternate to dataset registration identifiers and can be used to resolve back to the data itself. The following form will allow you to submit the appropriate information to receive a DOI for your dataset or document. Once you have completed this form, your information will be sent to GRIIDC for approval, and once approved a DOI will be sent to you.<font></p>
+            </fieldset>
 
-<strong>NOTICE:</strong> Fields preceded by an asterisk (<em>*</em>) are required inputs.<hr />
+            <strong>NOTICE:</strong> Fields preceded by an asterisk (<em>*</em>) are required inputs.<hr />
 
-<form id="doiForm" name="doiForm" action="" method="post">
+            {{ form_start(form, {'action': path('pelagos_app_ui_doirequest_default', {'id' : doiRequest.id|default}), 'method': 'POST'}) }}
+                <input type="hidden" id="id" value="{{doiRequest.id|default}}">
+                <input type="hidden" id="status" value="{{doiRequest.status|default}}">
+            
+                <fieldset id="qurl">
+                    <span class="helpSection">
+                        {% image '@PelagosAppBundle/Resources/public/images/info.png' %}
+                        <img class="info" src="{{ asset_url }}">
+                        {% endimage %}
+                        <div class="tooltiptext">
+                            <p>
+                                <strong>Location (URL):</strong> This is the Uniform Resource Locator (URL) that resolves to the dataset.<br><em>(e.g. http://www.nodc.noaa.gov/cgi-bin/OAS/prd/download/65725.11.11.tar.gz)</em>
+                            </p>
+                        </div>
+                    </span>
+                    {{ form_label(form.url) }}
+                    <br />
+                    {{ form_widget(form.url) }}
+                    <br />
+                </fieldset>
 
-<fieldset id="qurl">
-    <span id="qtip_url" style="float:right;">
-        <img src="/images/icons/info.png">
-    </span>
-    {{ form_label(form.url) }}
-    <br />
-    {{ form_widget(form.url) }}
-</fieldset>
+                <fieldset>
+                    <span class="helpSection">
+                        {% image '@PelagosAppBundle/Resources/public/images/info.png' %}
+                        <img class="info" src="{{ asset_url }}">
+                        {% endimage %}
+                        <div class="tooltiptext">
+                            <p>
+                                <strong>Creator(s):</strong> The primary scientist or researcher in producing the data, or the authors of the publication in priority order. The names may include a corporate, institutions, or personal name. In personal names, list family name before given name, as in Darwin, Charles. Non-roman names should be transliterated according to the ALA-LC schemes. <a href="http://www.loc.gov/catdir/cpso/roman.html" target="_blank"><em>(http://www.loc.gov/catdir/cpso/roman.html)</em></a>. 
+                            </p>
+                        </div>
+                    </span>
+                    {{ form_label(form.responsibleParty) }}
+                    <br />
+                    {{ form_widget(form.responsibleParty) }}
+                    <br />
+                </fieldset>
 
-<fieldset id="qcreator">
-    <span id="qtip_creator" style="float:right;">
-        <img src="/images/icons/info.png">
-    </span>
-    <label for="txtWho"><em>*</em>Digital Object Creator(s):</label>
-    <br />
-    <input class="popWho" type="text" name="txtWho" id="txtWho" size="120"/>
-</fieldset>
+                <fieldset id="qtitle">
+                    <span class="helpSection">
+                        {% image '@PelagosAppBundle/Resources/public/images/info.png' %}
+                        <img class="info" src="{{ asset_url }}">
+                        {% endimage %}
+                        <div class="tooltiptext">
+                            <p>
+                                <strong>Title:</strong> A label by which the data or publication is known. <em>(e.g. Multibeam bathymetry data for east Flower Garden Bank)</em>
+                            </p>
+                        </div>
+                    </span>
+                    {{ form_label(form.title) }}
+                    <br />
+                    {{ form_widget(form.title) }}
+                    <br />
+                </fieldset>
 
-<fieldset id="qtitle">
-    <span id="qtip_title" style="float:right;">
-        <img src="/images/icons/info.png">
-    </span>
-    <label for="txtWhat"><em>*</em>Digital Object Title:</label>
-    <br />
-    <input class="popWhat" type="text" name="txtWhat" id="txtWhat" size="120"/>
-    <br />
-</fieldset>
+                <fieldset id="qpub">
+                    <span class="helpSection">
+                        {% image '@PelagosAppBundle/Resources/public/images/info.png' %}
+                        <img class="info" src="{{ asset_url }}">
+                        {% endimage %}
+                        <div class="tooltiptext">
+                            <p>
+                                <strong>Publisher:</strong> A holder of the data (e.g., GRIIDC) or the institution responsible for making the data available to the public. 
+                            </p>
+                        </div>
+                    </span>
+                    {{ form_label(form.publisher) }}
+                    <br />
+                    {{ form_widget(form.publisher) }}
+                    <br />
+                </fieldset>
 
-<fieldset id="qpub">
-    <span id="qtip_pub" style="float:right;">
-        <img src="/images/icons/info.png">
-    </span>
-    <label for="txtWhere"><em>*</em>Digital Object Publisher:</label>
-    <br />
-    <input class="popWhere" type="text" name="txtWhere" id="txtWhere" size="120"/>
-    <br />
-</fieldset>
+                <fieldset id="txtDate_fld">
+                    <span class="helpSection">
+                        {% image '@PelagosAppBundle/Resources/public/images/info.png' %}
+                        <img class="info" src="{{ asset_url }}">
+                        {% endimage %}
+                        <div class="tooltiptext">
+                            <p>
+                                <strong>Publication Date:</strong> A valid ISO 8601 date <em>e.g. (2012-12-23)</em>
+                            </p>
+                        </div>
+                    </span>
+                    {{ form_label(form.publicationDate) }}
+                    <br />
+                    {{ form_widget(form.publicationDate) }}
+                    <br />
+                </fieldset>
 
-<fieldset id="txtDate_fld">
-    <span id="qtip_date" style="float:right;">
-        <img src="/images/icons/info.png">
-    </span>
-    <label for="txtDate"><em>*</em>Digital Object Publication Date:</label>
-    <br />
-    <input class="popDate" type="text" name="txtDate" id="txtDate" size="120"/>
-    <br />
- </fieldset>
+            {{ form_end(form) }}
+            <br>
+            {% if is_granted('ROLE_DATA_REPOSITORY_MANAGER') and doiRequest.status == constant('Pelagos\\Entity\\DoiRequest::STATUS_SUBMITTED') %}
+                <button type="button" id="btnApprove" value="approve">Approve</button>
+            {% endif %}
+            </td>
+        <td>
+        </td>
+    </tr>
+</table>
