--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/DoiRequest/data-managers.doi-requested.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/DoiRequest/data-managers.doi-requested.email.twig
@@ -2,13 +2,13 @@
 
 {% block body_html %}
 
-Dear {{ dm.firstName }} {{ recipient.lastName }},<br>
+Dear {{ recipient.firstName }} {{ recipient.lastName }},<br>
 <p>
     A Digital Object Identifier (DOI) has been requested for the dataset
-    <a href="{{data.doi.requesturl}}">{{data.doi.requesturl}}</a> that is submitted
+    <a href="{{ url }}">{{ url }}</a> that is submitted
     and registered with the Gulf of Mexico Research Initiative Information and Data
-    Cooperative (GRIIDC) by {{data.user.firstName}} {{data.user.lastName}}.
-    {{data.user.firstName}} {{data.user.lastName}} is a member of {{ data.user.RCs | join(', ') }}.
+    Cooperative (GRIIDC) by {{ creator.firstName }} {{ creator.lastName }}.
+    {{ creator.firstName }} {{ creator.lastName }} is a member of {{ creator.researchGroupNames | join(', ') }}.
 </p>
 Thank you,<br />
 The GRIIDC Team<br />
@@ -24,12 +24,12 @@ The GRIIDC Team<br />
 
 {% block body_text %}
 
-Dear {{ dm.firstName }} {{ recipient.lastName }},
+Dear {{ recipient.firstName }} {{ recipient.lastName }},
 
 A Digital Object Identifier (DOI) has been requested for the dataset
-{{data.doi.requesturl}} that is submitted and registered with the Gulf of Mexico
-Research Initiative Information and Data Cooperative (GRIIDC) by {{data.user.firstName}} {{data.user.lastName}}.
-{{data.user.firstName}} {{data.user.lastName}} is a member of {{ data.user.RCs | join(', ') }}.
+{{ url }} that is submitted and registered with the Gulf of Mexico
+Research Initiative Information and Data Cooperative (GRIIDC) by {{ creator.firstName }} {{ creator.lastName }}.
+{{ creator.firstName }} {{ creator.lastName }} is a member of {{ creator.researchGroupNames | join(', ') }}.
 
 Thank you,
 The GRIIDC Team
